# RadicalTree

./: .gitignore  README.md  predict.py  pyproject.toml  submit.sh  submit_hyperparameter_optimization.sh  submit_train_predict.sh  submit_train_predict_chemprop.sh  submit_train_predict_fractions.sh  train.py
data/: all_closed_shell_data.csv  all_closed_shell_gav.csv  closed_shell.csv  closed_shell_data.csv  closed_shell_gav.csv  closed_shells.csv  hbi.csv  hbi_prediction_empirical.csv  hbi_unc.csv  johnson_cbs-qb3.py  johnson_g4.py  pang.py  radical.csv  radical_data.csv  radical_data_no_dup.csv  radical_gav.csv  radical_resonance.csv  radical_resonance_gav.csv  resonance_radical_cluster.csv  resonance_radical_gav.csv  resonance_radical_gav_best.csv  resonance_radical_sidt.csv  resonance_radicals.csv
notebooks/: 1.1_separate_CBS-QB3_G4_calculations.ipynb  2.1_get_radical_data.ipynb  2.2_get_resonance_radicals_and_descriptors.ipynb  2.2_plot_radical_data.ipynb  2.3_get_GAV_estimation_for_radical_data.ipynb  2.3_plot_radical_data_and_resonance_radical_descriptors.ipynb  2.4_get_GAV_estimation_for_radical_data.ipynb  2.4_plot_radical_data_vs_GAV_estimation.ipynb  2.5_get_closed_shell_data.ipynb  2.5_plot_radical_data_vs_GAV_estimation.ipynb  3.1_get_GAV_estimation_for_resoance_radical.ipynb  3.1_get_hbi_data.ipynb  3.1_get_resonance_radicals_and_descriptors.ipynb  3.2_get_resonance_radical_descriptors.ipynb  3.2_plot_hbi_data.ipynb  3.2_plot_resonance_radical_descriptors.ipynb  3.3_get_GAV_estimation_for_resoance_radical.ipynb  3.3_plot_hbi_data.ipynb  5.1_get_hbis.ipynb  (+43 more)
(+322 files in other folders)
