[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "RadicalTree"
version = "0.0.1"
authors = [
  { name="Hao-Wei Pang", email="hwpang@mit.edu" },
]
description = "A low-data machine learning algorithm for predicting hydrogen bond increments (HBI) from molecular structure."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"

[tool.setuptools]
packages = ["tree"]

[project.urls]
Homepage = "https://github.com/hwpang/RadicalTree"
Issues = "https://github.com/hwpang/RadicalTree/issues"
